<resources>
    <string name="app_name">Tip Calculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="amount">Amount</string>
    <string name="custom_tip_percentage">Custom %</string>
    <string name="fifteen_percent">15%</string>
    <string name="eighteen_percent">18%</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add a calc widget</string>
    <string name="widget_choose">Choose your percentage</string>
    <string name="widget_percent">%</string>
    <string name="widget_three_percent">3</string>
</resources>
