<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_blue_light"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/widget_choose"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:text="@string/widget_three_percent"
        android:id="@+id/config_activity_percentage" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="30"
        android:progress="3"
        android:layout_marginTop="50dp"
        android:background="@android:color/white"
        android:layout_marginBottom="50dp"
        android:id="@+id/config_activity_seekBar" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_widget"
        android:padding="5dp"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_dark"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>